--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'  
   args: ['install']
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "create"]
 - name: "gcr.io/cloud-builders/gcloud"  
   args: ["app", "deploy"]
   timeout: "1600s"
