--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,6 @@ steps:
   args: ['install']
 - name: "gcr.io/cloud-builders/gcloud"  
   args: ["app", "create"]
+  env:
+  - '--region=us-central1'
   timeout: "1600s"
