--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,11 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'  
   args: ['install']
 - name: "gcr.io/cloud-builders/gcloud"  
+  args: ["app", "create", "--region=us-central1"]
+  env:
+  - '--region=us-central1'
+  - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
+- name: "gcr.io/cloud-builders/gcloud"  
   args: ["app", "deploy"]
   env:
   - '--region=us-central1'
