--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,9 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'  
   args: ['install']
 - name: "gcr.io/cloud-builders/gcloud"  
-  args: ["app", "create"]
+  args: ["app", "create", "--region=us-central"]
   env:
-  - '--region=us-central1'
+  - '--region=us-central'
   - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
 - name: "gcr.io/cloud-builders/gcloud"  
   args: ["app", "deploy"]
