--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,5 +2,7 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'  
   args: ['install']
 - name: "gcr.io/cloud-builders/gcloud"  
+  args: ["app", "create", "--region=asia-east1"]
+- name: "gcr.io/cloud-builders/gcloud"  
   args: ["app", "deploy"]
   timeout: "1600s"
